--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,209 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Меркурий</title>
     <link href="sass/style.scss" rel="stylesheet">
   </head>
   <body>
+    <header class="main-header">
+        <section class="main-header__info  main-info">
+          <div class="main-info__content">
+            <a class="main-info__logo">
+              <img src="img/logo.png" width="219" height="34" alt="логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+            </a>
+            <p class="main-info__logo-description">Медицинская одежда, спецодежда и униформа</p>
+            <a class="main-info__order-callback" href="#">Заказать телефонный звонок</a>
+            <a class="main-info__phone" href="tel:+78002005843">8 (800) 200-58-43</a>
+            <a class="main-info__phone" href="tel:+78314196106">8 (800) 200-58-43</a>
+          </div>
+        </section>
 
+        <nav class="main-header__nav main-nav">
+          <div class="main-nav__content">
+            <a class="main-nav__open-nav" href="#">
+              <span class="visually-hidden">Открыть меню</span>
+            </a>
+            <ul class="main-nav__categories-list">
+
+            </ul>
+            <a class="main-nav__search" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+            <a class="main-nav__sign-in" href="#">
+              <span class="visually-hidden">Вход или регистрация</span>
+            </a>
+            <a class="main-nav__cart" href="#">
+              <span class="visually-hidden">Корзина</span>
+            </a>
+          </div>
+        </nav>
+
+        <section class="main-header__popular  popular-sections">
+          <ul class="popular-sections__list">
+            <li class="popular-sections__item">
+              <a href="#">
+                Оптовым клиентам
+              </a>
+            </li>
+            <li class="popular-sections__item">
+              <a href="#">
+                Услуги
+              </a>
+            </li>
+            <li class="popular-sections__item">
+              <a href="#">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </section>
+
+    </header>
+
+    <main class="main-content">
+      <section class="main-content__banner  banner">
+        <div class="banner__content">
+          <p class="banner__lead">
+            <span>Медицинская одежда</span> для медицинских учереждений на заказ!
+          </p>
+          <p class="banner__description">
+            Более 12 лет мы создаем модельную медицинскую одежду, которая учитывает современные тенденции в моде.
+          </p>
+          <a class="banner__link" href="#">В каталог</a>
+          <img class="banner__image" src="img/banner-1-bg.png" width="138" height="152" alt="Пример медицинской одежды">
+        </div>
+      </section>
+
+      <section class="main-content__categories  categories">
+        <div class="categories__content">
+          <h2 class="categories__heading">
+            Категории
+          </h2>
+
+          <ul class="categories__list">
+            <li>
+              <a class="categories__item">
+                <img class="categories__img" src="img/woman-1.png" width="78" height="191" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                Медицина
+              </a>
+            </li>
+            <li>
+              <a class="categories__item">
+                <img class="categories__img" src="img/woman-2.png" width="100" height="194"  alt="Пример одежды из категории &laquo;Детство&raquo;">
+                Детство
+              </a>
+            </li>
+            <li>
+              <a class="categories__item">
+                <img class="categories__img" src="img/woman-3.png" width="116" height="194" alt="Пример одежды из категории &laquo;Бьюти&raquo;">
+                Beauty
+              </a>
+            </li>
+            <li>
+              <a class="categories__item">
+                <img class="categories__img" src="img/woman-4.png" width="91" height="206" alt="Пример одежды из категории &laquo;Сайз Плюс&raquo;">
+                Size+
+              </a>
+            </li>
+            <li>
+              <a class="categories__item">
+                <img class="categories__img" src="img/woman-5.png" width="128" height="201" alt="Пример одежды из категории &laquo;Буду мамой&raquo;">
+                Буду мамой
+              </a>
+            </li>
+            <li>
+              <a class="categories__item">
+                <img class="categories__img" src="img/woman-6.png" width="101" height="197" alt="Пример одежды из категории &laquo;Спецодежда&raquo;">
+                Спецодежда
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="main-content__popular-products  popular-products">
+        <div class="popular-products__content">
+          <h2 class="popular-product__heading">Популярные товары</h2>
+          <ul class="popular-products__list">
+            <li class="popular-products__item  popular-product">
+              <p class="popular-product__image">
+                <img src="img/popular-woman-1.png" width="95" height="330" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+              </p>
+              <p class="popular-product__description">
+                Костюм медицинский К-74 «Фаина»
+              </p>
+              <p class="popular-product__price">
+                900 руб
+              </p>
+              <button class="popular-product__like">Нравится</button>
+              <button class="popular-product__watch"></button>
+            </li>
+
+            <li class="popular-products__item  popular-product">
+              <p class="popular-product__image">
+                <img src="img/popular-woman-2.png" width="89" height="329" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+              </p>
+              <p class="popular-product__description">
+                Костюм медицинский К-74 «Фаина»
+              </p>
+              <p class="popular-product__price">
+                900 руб
+              </p>
+              <button class="popular-product__like">Нравится</button>
+              <button class="popular-product__watch"></button>
+            </li>
+
+            <li class="popular-products__item  popular-product">
+              <p class="popular-product__image">
+                <img src="img/popular-woman-3.png" width="94" height="332" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+              </p>
+              <p class="popular-product__description">
+                Костюм медицинский К-74 «Фаина»
+              </p>
+              <p class="popular-product__price">
+                900 руб
+              </p>
+              <button class="popular-product__like">Нравится</button>
+              <button class="popular-product__watch"></button>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <address class="main-content__contacts contacts">
+        <div class="contacts__content">
+          <p class="contacts__company-name">
+            «Меркурий-Интер-Лаб»
+          </p>
+          <a href="tel:88002005843">
+            8-800-200-58-43
+          </a>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <p class="contacts__address">
+                г. Нижний Новгород
+                603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a href="#">Показать на карте</a>
+              </p>
+              <a href="tel:+78314196106">+7 (831) 419-61-06</a>
+            </li>
+            <li class="contacts__item">
+              <p class="contacts__address">
+                г. Нижний Новгород
+                603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a href="#">Показать на карте</a>
+              </p>
+              <a href="tel:+78314196106">+7 (831) 419-61-06</a>
+            </li>
+          </ul>
+        </div>
+      </address>
+
+    </main>
+
+    <!--<footer class="main-footer">-->
+      <!--<div class="main-footer__content">-->
+        <!---->
+      <!--</div>-->
+    <!--</footer>-->
   </body>
 </html>
