--- a/source/index.html
+++ b/source/index.html
@@ -299,25 +299,71 @@
       <section class="main-content__banner  banner">
         <div class="banner__content">
           <button class="banner__button  banner__button--left"></button>
-          <div class="banner__text">
-            <h3 class="banner__heading">
-              Модельная одежда
-            </h3>
-            <p class="banner__lead">
-              для медицинских учереждений на заказ!
-            </p>
-            <p class="banner__description">
-              Более 12 лет мы создаем модельную медицинскую одежду, которая учитывает современные тенденции в моде.
-            </p>
-            <a class="banner__link" href="#">
-              В каталог
-            </a>
-          </div>
-          <picture>
-            <source srcset="img/banner-1-bg-desktop.png" media="(min-width: 1170px)">
-            <source srcset="img/banner-1-bg-tablet.png" media="(min-width: 760px)">
-            <img class="banner__image" src="img/banner-1-bg.png" alt="Пример медицинской одежды">
-          </picture>
+          <ul class="banner__list">
+            <li class="banner__item">
+              <div class="banner__text">
+                <h3 class="banner__heading">
+                  Модельная одежда
+                </h3>
+                <p class="banner__lead">
+                  для медицинских учереждений на заказ!
+                </p>
+                <p class="banner__description">
+                  Более 12 лет мы создаем модельную медицинскую одежду, которая учитывает современные тенденции в моде.
+                </p>
+                <a class="banner__link" href="#">
+                  В каталог
+                </a>
+              </div>
+              <picture>
+                <source srcset="img/banner-1-bg-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/banner-1-bg-tablet.png" media="(min-width: 760px)">
+                <img class="banner__image" src="img/banner-1-bg.png" alt="Пример медицинской одежды">
+              </picture>
+            </li>
+            <li class="banner__item">
+              <div class="banner__text">
+                <h3 class="banner__heading">
+                  Модельная одежда
+                </h3>
+                <p class="banner__lead">
+                  для медицинских учереждений на заказ!
+                </p>
+                <p class="banner__description">
+                  Более 12 лет мы создаем модельную медицинскую одежду, которая учитывает современные тенденции в моде.
+                </p>
+                <a class="banner__link" href="#">
+                  В каталог
+                </a>
+              </div>
+              <picture>
+                <source srcset="img/banner-1-bg-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/banner-1-bg-tablet.png" media="(min-width: 760px)">
+                <img class="banner__image" src="img/banner-1-bg.png" alt="Пример медицинской одежды">
+              </picture>
+            </li>
+            <li class="banner__item">
+              <div class="banner__text">
+                <h3 class="banner__heading">
+                  Модельная одежда
+                </h3>
+                <p class="banner__lead">
+                  для медицинских учереждений на заказ!
+                </p>
+                <p class="banner__description">
+                  Более 12 лет мы создаем модельную медицинскую одежду, которая учитывает современные тенденции в моде.
+                </p>
+                <a class="banner__link" href="#">
+                  В каталог
+                </a>
+              </div>
+              <picture>
+                <source srcset="img/banner-1-bg-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/banner-1-bg-tablet.png" media="(min-width: 760px)">
+                <img class="banner__image" src="img/banner-1-bg.png" alt="Пример медицинской одежды">
+              </picture>
+            </li>
+          </ul>
 
           <button class="banner__button  banner__button--right"></button>
         </div>
@@ -390,7 +436,7 @@
           <ul class="categories__list">
             <li class="categories__item">
               <picture>
-                <source srcset="img/woman-1-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/w1test.png" media="(min-width: 1170px)">
                 <img class="categories__img" src="img/woman-1.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
@@ -400,7 +446,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/woman-2-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/w2test.png" media="(min-width: 1170px)">
                 <img class="categories__img" src="img/woman-2.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
@@ -410,7 +456,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/woman-3-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/w3test.png" media="(min-width: 1170px)">
                 <img class="categories__img" src="img/woman-3.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
@@ -420,7 +466,7 @@
             </li>
             <li class="categories__item" >
               <picture>
-                <source srcset="img/woman-4-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/w4test.png" media="(min-width: 1170px)">
                 <img class="categories__img" src="img/woman-4.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
@@ -430,7 +476,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/woman-5-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/w5test.png" media="(min-width: 1170px)">
                 <img class="categories__img" src="img/woman-5.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
@@ -440,7 +486,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/woman-6-desktop.png" media="(min-width: 1170px)">
+                <source srcset="img/w6test.png" media="(min-width: 1170px)">
                 <img class="categories__img" src="img/woman-6.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
@@ -1267,14 +1313,23 @@
 
       <div class="popups__popup-overlay  auth__overlay">
         <div class="popups__popup  popup-auth">
-          <h2 class="popup-auth__heading">
-            Войти <span>Регистрация</span>
-          </h2>
-          <form class="popup-auth__form">
+          <div class="popup-auth__buttons">
+            <button class="popup-auth__log-in  popup-auth__button  js-active" type="button">Войти</button>
+            <button class="popup-auth__sign-up  popup-auth__button" type="button">Регистрация</button>
+          </div>
+
+          <form class="popup-auth__form  js-form-login  js-show">
+            <input class="popup-auth__input" type="email" placeholder="Почта*">
+            <input class="popup-auth__input" type="password" placeholder="Пароль*">
+            <button class="popup-auth__submit" type="submit">Оставить заявку</button>
+          </form>
+
+          <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
             <input class="popup-auth__input" type="number" placeholder="ИНН*">
             <button class="popup-auth__submit" type="submit">Оставить заявку</button>
           </form>
+
           <p class="popup-auth__hint">Для юридических лиц*</p>
           <button class="popup-auth__close  closeButton" type="button">
             <span class="visually-hidden">Закрыть окно</span>
