--- a/source/catalog.html
+++ b/source/catalog.html
@@ -126,6 +126,135 @@
             <span class="main-nav__input-hint">0 товаров</span>
           </a>
         </div>
+
+        <ul class="main-nav__categories nav-categories  nav-categories--catalog">
+          <li class="nav-categories__item">
+            <a class="nav-categories__link" href="catalog.html">Медицина</a>
+            <ul class="nav-categories__nested-list">
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link  nav-categories__nested-link--heading" href="#">Мужская одежда</a>
+                <ul class="nav-categories__deep-list">
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Халаты</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Блузы</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Брюки</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link  nav-categories__nested-link--heading" href="catalog.html">Женская одежда</a>
+                <ul class="nav-categories__deep-list">
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Халаты</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="catalog.html">Блузы</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Брюки</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Юбки</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link  nav-categories__nested-link--heading" href="#">Унисекс</a>
+                <ul class="nav-categories__deep-list">
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Халаты</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Колпаки</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Бахилы</a>
+                  </li>
+                  <li class="nav-categories__deep-item">
+                    <a class="nav-categories__deep-link" href="#">Фартуки</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-categories__item">
+            <a class="nav-categories__link" href="#">Детство</a>
+            <ul class="nav-categories__nested-list">
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Блузы</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Брюки</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Колпаки</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-categories__item">
+            <a class="nav-categories__link" href="#">Beauty</a>
+            <ul class="nav-categories__nested-list">
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Халаты</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Сарафаны</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Фартуки</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-categories__item">
+            <a class="nav-categories__link" href="#">Size+</a>
+            <ul class="nav-categories__nested-list">
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Халаты</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Блузы</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Колпаки</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-categories__item">
+            <a class="nav-categories__link" href="#">Буду мамой!</a>
+            <ul class="nav-categories__nested-list">
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Халаты</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Блузы</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Брюки</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-categories__item">
+            <a class="nav-categories__link" href="#">Спецодежда</a>
+            <ul class="nav-categories__nested-list">
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Жилеты</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Куртки</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Брюки</a>
+              </li>
+              <li class="nav-categories__nested-item">
+                <a class="nav-categories__nested-link" href="#">Фартуки</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </nav>
 
       <section class="main-header__popular  popular-sections">
@@ -171,14 +300,14 @@
 
     <main class="page-catalog  catalog">
       <div class="catalog__breadcrumbs  breadcrumbs">
-        <div class="breadcrumbs__content">
+        <div class="breadcrumbs__content  breadcrumbs__content--catalog">
           <a class="breadcrumbs__link">Главная</a>
           <a class="breadcrumbs__link  breadcrumbs__link--active">Каталог</a>
         </div>
       </div>
 
       <section class="catalog__switchers  category-switchers">
-        <button class="category-switchers__button  button">Фильтр</button>
+        <button class="category-switchers__button  button  js-filter">Фильтр</button>
         <button class="category-switchers__button  category-switchers__button--active  button">Медицина</button>
       </section>
 
@@ -678,7 +807,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -723,7 +852,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -768,7 +897,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -813,7 +942,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -858,7 +987,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -903,7 +1032,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -948,7 +1077,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -993,7 +1122,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -1038,7 +1167,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -1083,7 +1212,7 @@
                       <li class="catalog-card__measurements-item">56</li>
                       <li class="catalog-card__measurements-item">58</li>
                     </ul>
-                    <a class="catalog-card__quick-view" href="#">
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
                       <svg>
                         <use xlink:href="#spr-view"></use>
                       </svg>
@@ -1743,6 +1872,8 @@
         </div>
       </div>
     </div>
+    <script src="js/header.js"></script>
     <script src="js/catalog.js"></script>
+    <script src="js/popups.js"></script>
   </body>
 </html>
